@startuml db_schema

entity "Batch" as Batch {
  *id : number <<generated>>
  --
  *name : text
  assigned_to : text
  notes : text
  datetime_added : datetime
  last_export : datetime
  export_zip: file field
}

Entity "File" as File {
    *id : number <<generated>>
    *item : number <<FK>>
    name : text
    content_type : text
    content_disposition : text
    content_id : text
    disposition : text
    file : file field
    }

entity "Item" as Item {
  *id : number <<generated>>
  --
  *batch : number <<FK>>
  date : datetime
  reporter : text
  title : text
  pool_report : boolean
  publish : boolean
  off_the_record : boolean
  review_status: int
  notes : text
  body_original : text
  body_clean : text
  body_redact : text
  body_final : text
  last_modified : datetime
}

Batch ||..|{ Item
Item ||..|{ File

@enduml